# clearmail-engine

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT_NOTES.md  Makefile  PROJECT_PLAN.md  README.md
docs/: architecture.md  roadmap.md
go-version/: README.md  go.mod
go-version/cmd/clearmail/: main.go
python-version/: README.md
python-version/backend/: requirements.txt
python-version/backend/src/core/: rule_engine.py
python-version/backend/src/utils/: logging_utils.py
rust-version/: Cargo.toml  README.md
rust-version/src/: lib.rs
